--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>2.7.1</version>
+		<relativePath>./</relativePath>
 	</parent>
 
 	<dependencies>
